Added Code Editor Pane Using Canvas